--- a/netlify.toml
+++ b/netlify.toml
@@ -8,7 +8,7 @@
 [[plugins]]
   package = "@netlify/plugin-nextjs"
 
-[[plugins.inputs]]
+[plugins.inputs]
   enable_cache = true
 
 [build.processing]
